--- a/frontend/src/pages/LoginPage/LoginPage.css
+++ b/frontend/src/pages/LoginPage/LoginPage.css
@@ -3,7 +3,7 @@
   display: flex;
   align-items: flex-start;
   justify-content: center;
-  padding-top: 2.5rem;
+  padding-top: 1.25rem;
 }
 
 .auth-box {
@@ -13,8 +13,19 @@
 
 .auth-box h1 {
   text-align: center;
+  margin-bottom: 0.5rem;
 }
 
 .auth-card {
   margin: 0;
+  padding: 1rem 1.25rem;
+}
+
+.auth-links {
+  margin-top: 0.5rem;
+  margin-bottom: 0;
+}
+
+.auth-links-next {
+  margin-top: 0.25rem;
 }
