--- a/frontend/src/pages/ContentPage/ContentPage.css
+++ b/frontend/src/pages/ContentPage/ContentPage.css
@@ -45,3 +45,16 @@
   color: #444;
   line-height: 1.5;
 }
+
+.links-empty {
+  margin-top: 1.5rem;
+}
+
+.links-empty p {
+  margin: 0;
+  color: #666;
+}
+
+.about-body-empty {
+  color: #666;
+}
