--- a/frontend/src/pages/ContentPage/ContentPage.css
+++ b/frontend/src/pages/ContentPage/ContentPage.css
@@ -9,6 +9,18 @@
   line-height: 1.5;
 }
 
+.content-section-empty {
+  margin: 0 0 1.5rem;
+  padding: 1.25rem 1.5rem;
+}
+
+.content-section-empty-text {
+  margin: 0;
+  color: #666;
+  font-size: 0.9375rem;
+  line-height: 1.5;
+}
+
 .links-list {
   list-style: none;
   margin: 1.5rem 0 0;
